work on the tutorials home page

--- a/tutorials/templates/tutorials/index.html
+++ b/tutorials/templates/tutorials/index.html
@@ -5,12 +5,17 @@
 	<meta charset="utf-8"/>
 	{% load staticfiles %}
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel='stylesheet' href="{% static 'tutorials/css/style.css' %}" type='text/css'/>
+	<link rel='stylesheet' href="{% static 'tutorials/css/app.css' %}" type='text/css'/>
 </head>
 
-<body class='body'>
-	<div class='header'>
-		<h2>Tutorials Index</h2>
+<body>
+	<div class='main_wrapper'>
+	<div class='header'><b>Tutorials Index</b></div>
+	<div class='list_div'> 
+		<ul>
+			<li>Django Tuts polls app</li>
+		</ul>
+	</div>
 	</div>
 </body>
 </html>
