--- a/tutorials/templates/tutorials/index.html
+++ b/tutorials/templates/tutorials/index.html
@@ -13,7 +13,7 @@
 	<div class='header'><b>Tutorials Index</b></div>
 	<div class='list_div'> 
 		<ul>
-			<li>Django Tuts polls app</li>
+			<a href='/polls/'><li>Django Tuts polls app</li></a>
 		</ul>
 	</div>
 	</div>
