--- a/tutorials/templates/tutorials/index.html
+++ b/tutorials/templates/tutorials/index.html
@@ -14,6 +14,8 @@
 	<div class='list_div'> 
 		<ul>
 			<a href='/polls/'><li>Django Tuts polls app</li></a>
+			<a href='/sentdex/'><li>SentDex Tutorial</li></a>
+			<a href='/tnb/'><li>The New Boston Tutorial</li></a>
 		</ul>
 	</div>
 	</div>
