--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,4 @@
+{% include "tutorials/includes/home_button.html" %}
 <h1>{{ question.question_text }}</h1>
 
 {% if error_message %} <p><strong>{{ error_message }}</strong></p> {% endif %}
