--- a/tutorials/templates/tutorials/index.html
+++ b/tutorials/templates/tutorials/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8"/>
 	{% load staticfiles %}
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel='stylesheet' href="{% static 'tutorials/css/bootstrap.min.css' %}" type='text/css'/>
 	<link rel='stylesheet' href="{% static 'tutorials/css/app.css' %}" type='text/css'/>
 </head>
 
