--- a/tnb/templates/tnb/includes/header.html
+++ b/tnb/templates/tnb/includes/header.html
@@ -7,15 +7,19 @@
 	<meta charset="utf-8"/>
 	{% load staticfiles %}
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel='stylesheet' href="{% static 'tutorials/css/bootstrap.min.css' %}" type='text/css'/>
-	<link rel='stylesheet' href="{% static 'tutorials/css/tnb_app.css' %}" type='text/css'/>
+	<link rel='stylesheet' href="{% static 'tnb/css/bootstrap.min.css' %}" type='text/css'/>
 </head>
 
 <body>
 {% include "tutorials/includes/home_button.html" %}
-
+<div class='main_wrapper'>
+{% if header %}
+<div class='header'><b>{{ header }}</b></div>
+{% else %}
+<div class='header'><b>TNB Tutorial</b></div>
+{% endif %}
 {% block content %}
 {% endblock %}
-
+</div>
 </body>
 </html>
